# aoc2023

aoc01/: Cargo.toml
aoc01/src/: main.rs
aoc02/: Cargo.toml
aoc02/src/: main.rs
aoc03/: Cargo.toml
aoc03/src/: main.rs
aoc04/: Cargo.toml
aoc04/src/: main.rs
